# oxidise-gl

./: .gitignore  Cargo.toml  README.md  pyrightconfig.json
.github/workflows/: ci.yml
editor/: Cargo.toml
editor/src/: camera.rs  main.rs  scripting.rs  stress.rs
gl_renderer/: Cargo.toml  build.rs
gl_renderer/examples/: spinning.rs
gl_renderer/src/: arena.rs  components.rs  cull.comp  framebuffer.rs  geometry.rs  gl_buffer.rs  gl_init.rs  hzb_reduce.comp  lib.rs  renderer.rs  shader.frag  shader.rs  shader.vert  shaders.rs
scripts/: gl_renderer.pyi  orbit.py  scene.py  swarm.py
