[package]
name = "gl_renderer"
version = "0.1.0"
edition = "2021"

[lib]
name = "gl_renderer"
path = "src/lib.rs"

[dependencies]
winit = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
glow = { workspace = true }
raw-window-handle = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
half = { workspace = true }
hecs = { workspace = true }
